# jira-resolver

./: .env.example  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
devstack/: Dockerfile  docker-compose.yml
src/jira_resolver/: bot.py  config.py
tests/: lib_test.py
